Remove isNoverify method from CoreUtils
Removed the isNoverify method that checks for the '-Xverify:none' argument.